# pg_catalog

./: .gitignore  Cargo.toml  Makefile  README.md  extract_queries_from_postgres_logs.py  libprep.md  list_functions.py  notes.md  schema.py  try_query_from_python.py
.github/workflows/: ci.yml
agents-dev/: completed-tasks.md  fix-query-93.md  inf-schema-tasks-192.md  intellij-compat-tasks.md  intellij-missing-functions.md  refactor-to-binary.md  session-tests-tasks.md  vscode-compat-tasks.md
captures/: dbeaver.yaml  intellij.yaml  pgsql-14.yaml
example/: Cargo.toml  README.md
example/src/: main.rs
example/tests/: test_example.py
pg_catalog_data/pg_schema/: pg_catalog__pg_attribute.yaml  pg_catalog__pg_available_extension_versions.yaml  pg_catalog__pg_class.yaml  pg_catalog__pg_constraint.yaml  pg_catalog__pg_database.yaml  pg_catalog__pg_group.yaml  pg_catalog__pg_hba_file_rules.yaml  pg_catalog__pg_init_privs.yaml  pg_catalog__pg_locks.yaml  pg_catalog__pg_namespace.yaml  pg_catalog__pg_prepared_statements.yaml  pg_catalog__pg_proc.yaml  pg_catalog__pg_settings.yaml  pg_catalog__pg_stat_activity.yaml  pg_catalog__pg_stat_all_indexes.yaml  pg_catalog__pg_stat_all_tables.yaml  pg_catalog__pg_stat_bgwriter.yaml  (+16 more)
src/: clean_duplicate_columns.rs  db_table.rs  lib.rs  logical_plan_rules.rs  main.rs  pg_catalog_helpers.rs  register_table.rs  replace.rs  replace_any_group_by.rs  router.rs  scalar_to_cte.rs  server.rs  session.rs  simple_logger.rs  user_functions.rs
tests/: public_api.rs  test_captures.py  test_datacl_capture.py  test_example.py  test_functional.py
