[package]
name = "datafusion_pg_catalog"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
datafusion = { git = "https://github.com/polygon-io/arrow-datafusion", rev = "6e71350" }
sqlparser = "0.55.0"
arrow = "55.1.0"
chrono = "0.4.40"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1"
async-trait = "0.1"
uuid = { version = "1.16.0", features = ["v4"] }
pgwire = "0.28.0"
futures = "0.3.31"
anyhow = "1.0.98"
bytes = "1.10.1"
log = "0.4.27"
env_logger = "0.11"
once_cell = "1.21.3"
datafusion-functions-aggregate = { git = "https://github.com/polygon-io/arrow-datafusion", rev = "6e71350" }
zip = "0.6"
df_subquery_udf = { git = "https://github.com/polygon-io/corr-subq-udf-rs", rev = "68b4936" }

[dev-dependencies]
tempfile = "3"
